Allow access to 'this' in expressions / support introspections